# Influencer-Manager-Agent-Team

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: gsd-file-manifest.json  settings.local.json
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: campaign_fields.yaml  escalation_triggers.yaml
data/: audit.db
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
knowledge_base/: general.md  instagram.md  tiktok.md  youtube.md
knowledge_base/examples/: bundled_rate.md  cpm_mention.md  escalation.md  misalignment_exit.md  multi_platform_bundle.md  positive_close.md  product_offer.md  usage_rights.md  walk_away.md
src/negotiation/: __init__.py  app.py  config.py  dashboard.py  health.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_health.py  test_metrics.py  test_orchestration.py  test_request_id.py  test_sentry.py  test_sheet_monitor.py
tests/audit/: test_cli.py  test_logger.py  test_slack_commands.py  test_store.py  test_wiring.py
tests/auth/: test_credentials.py
tests/campaign/: test_cpm_tracker.py  test_ingestion.py  test_models.py  test_webhook.py
tests/counterparty/: test_classifier.py  test_models.py  test_tone.py  test_tracker.py
tests/domain/: __init__.py  test_models.py  test_types.py
tests/email/: test_client.py  test_models.py  test_parser.py  test_threading.py
tests/levers/: test_lever_engine.py
tests/live/: conftest.py  test_gmail_live.py  test_sheets_live.py  test_slack_live.py
tests/llm/: test_agreement_composer.py  test_composer.py  (+5 more)
(+256 files in other folders)
