[project]
name = "influencer-negotiation-agent"
version = "0.1.0"
description = "AI-powered influencer rate negotiation agent"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.82.0",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "google-cloud-pubsub>=2.35.0",
    "gspread>=6.2.1",
    "mail-parser-reply>=1.36",
    "pydantic>=2.12,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "mypy>=1.19",
    "google-api-python-client-stubs>=1.32.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/negotiation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
